# url2markdown-cli

./: .bumpversion.cfg  AUTHORS.md  AUTHORS.rst  HISTORY.md  HISTORY.rst  LICENSE  Pipfile  README.md  README.rst  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py  url2markdown_cli.py
url2markdown_cli/: __init__.py  __main__.py  cli.py
